Add company edit form and drop the bundled Derby app database.
Company records can be edited from terp.core, and the obsolete etc/app data files are no longer tracked.

Co-authored-by: Cursor <cursoragent@cursor.com>